--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On 
+RewriteRule ^(.*)\/(\?.*)?$ $1$2 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)/$ /$1 [L,R]
 RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteRule ^([^\.]+)$ $1.html [NC, L] 
 RewriteRule ^index.html$ / [R=301,L]
